Add rule and ruleset modification tests
Fixed some issues that this has revealed:
* ClaimPermissions creation now detects when non-existent rulesets are specified during creation
* Updating ClaimPermissions rulesets also checks for non-existent rulesets being added
* ClaimPermission rule addition/removal now checks for nonsense inputs (e.g., removing rules that weren't there, adding ones that already are, duplicate input rules)
* OpenAPI spec updated to reflect the fact that various endpoints can return 400 (with corresponding changes to the client library)
* Resource's GetHashCode and Equals were inconsistent (the former included the DisplayName, which it should not have done)
*
